--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
               'fade-in': 'fadeIn 0.3s ease-out',
               'slide-up': 'slideUp 0.4s ease-out',
               'bounce-in': 'bounceIn 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275)',
+              'shimmer': 'shimmer 1.5s infinite',
             },
             keyframes: {
               fadeIn: {
@@ -57,6 +58,10 @@
               slideUp: {
                 '0%': { transform: 'translateY(20px)', opacity: '0' },
                 '100%': { transform: 'translateY(0)', opacity: '1' },
+              },
+              shimmer: {
+                '0%': { backgroundPosition: '200% 0' },
+                '100%': { backgroundPosition: '-200% 0' },
               },
               bounceIn: {
                 '0%': { transform: 'scale(0.8)', opacity: '0' },
