fix: UI 버그 수정 - Safe Area 및 overscroll 배경색
- 알림 페이지 헤더에 safe-area-pt 클래스 적용
- 설정 메뉴, 알림 설정, 비밀번호 변경, 공지사항 페이지에 Safe Area 적용
- index.html body 배경색을 stone-50(#fafaf9)으로 설정
- index.css html/body 배경색 통일 및 overscroll-behavior-y: none 적용
- pull-to-refresh 시 분홍색 배경 노출 문제 해결

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
       }
     </style>
   </head>
-  <body>
+  <body style="background-color: #fafaf9;">
     <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
 </body>
