--- a/index.html
+++ b/index.html
@@ -255,6 +255,6 @@
   </head>
   <body style="background-color: #fafaf9;">
     <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
+  <script type="module" src="/src/index.tsx"></script>
 </body>
 </html>
